--- a/ElderlyPersonView/elderlypersonscreen.css
+++ b/ElderlyPersonView/elderlypersonscreen.css
@@ -1,11 +1,62 @@
-.boxed {
-  border: 1px solid green ;
-  height: 450px;
+h1 {
+    color:white;
+    text-align: left;
+    font-size: 50px;
+    margin-left: 45px;
 }
-.button{
-    position: absolute;
-    top:550px;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+
+body {
+    height: 100%;
+    background: linear-gradient(90deg, dimgrey 30%,  steelblue 30%)
+}
+
+.sideButtons button{
+   background-color:whitesmoke;
+   border: 1px solid black;
+   color:black;
+   padding: 10px 24px;
+   cursor: pointer;
+   height: 55px;
+   width: 20%;
+   margin: 50px;
+   display: block;
+   position:relative;
+   top: -225px;
+}
+
+.sideButtons button:hover {
+    background-color: black;
+    color:whitesmoke;
+}
+
+.images{
+ display: flex;
+}
+
+.leftImage {
+    margin-left: 45px;
+}
+
+.rightImage{
+    margin-left: 100px;
+}
+
+
+.bottomButtons button{
+   background-color:dimgrey;
+   border: 1px solid black;
+   color:whitesmoke;
+   padding: 10px 54px;
+   cursor: pointer;
+   width: 27%;
+   margin: 50px;
+   height: 60px;
+   position:relative;
+   left: 350px;
+   top: -383px;
+}
+
+.bottomButtons button:hover {
+    background-color: black;
+    color:whitesmoke;
 }
