--- a/TrustedCircleView/trusted_circle.css
+++ b/TrustedCircleView/trusted_circle.css
@@ -6,9 +6,16 @@
     background-color: steelblue;
 }
 
+.TCircle *
+{
+    box-sizing: border-box;
+}
+
 .TCircle body
 {
     text-align: center;
+    padding: 0px;
+    margin: 0px;
 }
 
 /*Page Title*/
@@ -18,7 +25,7 @@
     color: khaki;
     font-size: 60px;
     margin: 0;
-    padding: 0px 0;
+    padding: 0px;
     text-shadow: 3px 3px 1px black;
 }
 
@@ -31,6 +38,83 @@
 
 /*Reminders and Messages*/
 
+.listHeader
+{
+    background-color: rgb(56, 56, 56);
+    padding: 30px 40px;
+    color: khaki;
+    text-align: center;
+}
+.listHeader:after
+{
+    content: "";
+    display: table;
+    clear: both;
+}
+.listHeader input
+{
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 70%;
+    padding: 10px;
+    float: left;
+    font-size: 18px;
+    color: rgb(56, 56, 56);
+}
+span.Add
+{
+    padding: 8px;
+    width: 20%;
+    background: green;
+    float: left;
+    text-align: center;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+}
+.Add:hover
+{
+    background-color: lightgreen;
+}
+.close
+{
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+}
+.close:hover
+{
+    background-color: #f44336;
+    color: white;
+}
+.TCircle ul
+{
+    margin: 0;
+    padding: 0;
+}
+.Reminders ul li
+{
+    cursor: pointer;
+    list-style-type: none;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background-color: rgb(77, 103, 185);
+    color: khaki;
+    font-size: 18px;
+    transition: 0.2s;
+}
+.Reminders ul li:nth-child(odd)
+{
+    background-color: rgb(40, 110, 150);
+}
+.Reminders ul li:hover
+{
+    background-color: rgb(22, 49, 97);
+}
+
 .RemMsg
 {
     display: grid;
@@ -38,35 +122,27 @@
     gap: 10px;
     grid-auto-rows: 100px;
     grid-template-areas:
-      "a a a a b b b b"
-      "a a a a b b b b"
-      "c c c c d d d d"
-      "c c c c d d d d";
+      "c a a a b b b b"
+      "c a a a b b b b"
+      "c a a a b b b b"
+      "c a a a b b b b";
     align-items: start;
 }
-.RemT
+.Reminders
 {
     grid-area: a;
 }
-.MsgT
+.Messages
 {
     grid-area: b;
 }
-.RemB
-{
-    grid-area: c;
-}
-.MsgB
-{
-    grid-area: d;
-}
 
-.RemMsg h2
+.Messages h2
 {
     color: khaki;
     text-decoration: solid;
 }
-.RemMsg label, .RemMsg option, .RemMsg input, .RemMsg select
+.Messages label, .Messages input
 {
     color: khaki;
     font-size: 16px;
@@ -77,26 +153,6 @@
 input.txtbox, select.rmndrList
 {
     background-color: dimgrey;
-}
-
-input.AddBtn
-{
-    background-color: green;
-    cursor: pointer;
-}
-input.AddBtn:hover
-{
-    background-color: lightgreen;
-}
-
-input.RemBtn
-{
-    background-color: darkred;
-    cursor: pointer;
-}
-input.RemBtn:hover
-{
-    background-color: red;
 }
 
 input.SndBtn
