--- a/front_end/src/components/Authentication/Login/LoginButton.css
+++ b/front_end/src/components/Authentication/Login/LoginButton.css
@@ -1,12 +1,23 @@
 ul {
-  padding:0;
-  list-style:none;
+  padding: 0;
+  list-style: none;
   width: 30%;
-  margin:auto;
+  margin: auto;
 }
 
-li{
-  font-size:1.2rem;
+li {
+  font-size: 1.2rem;
   line-height: 2rem;
   border-bottom: 1px dotted #777;
+}
+
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #4caf50;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
 }
