--- a/front_end/src/components/Authentication/Login/LoginButton.css
+++ b/front_end/src/components/Authentication/Login/LoginButton.css
@@ -11,13 +11,21 @@ li {
   border-bottom: 1px dotted #777;
 }
 
-.block {
-  display: block;
-  width: 100%;
+.login-button {
+  display: grid;
+  margin: auto;
+  width: 20%;
   border: none;
-  background-color: #4caf50;
+  background-color: blue;
   padding: 14px 28px;
-  font-size: 16px;
+  font-size: 22px;
   cursor: pointer;
   text-align: center;
+  transition-duration: 0.4s;
+  color: black;
+}
+
+.login-button:hover {
+  background-color: green;
+  color: white;
 }
