--- a/Single_View/CuratorView/curator.css
+++ b/Single_View/CuratorView/curator.css
@@ -121,7 +121,7 @@ span.Add
 .cvContent
 {
     position: relative;
-    left: 200px;
+    left: 20px;
 }
 
 /*Control Panel*/
@@ -129,8 +129,7 @@ span.Add
 .cvPanel
 {
     position: relative;
-    left: 430px;
-    padding: 30px;
+    left: 20px;
 }
 
 /*Reminders and Messages*/
@@ -162,9 +161,6 @@ span.Add
     gap: 10px;
     grid-auto-rows: 100px;
     grid-template-areas:
-      "c c a a a b b b"
-      "c c a a a b b b"
-      "c c a a a b b b"
       "c c a a a b b b";
     align-items: start;
 }
@@ -182,6 +178,8 @@ span.Add
 {
     color: khaki;
     text-decoration: solid;
+    padding-bottom: 4px;
+    margin: 0;
 }
 .Messages label, .Messages input
 {
