--- a/Single_View/TrustedCircleView/trusted_circle.css
+++ b/Single_View/TrustedCircleView/trusted_circle.css
@@ -122,9 +122,6 @@ span.Add
     gap: 10px;
     grid-auto-rows: 100px;
     grid-template-areas:
-      "c a a a b b b b"
-      "c a a a b b b b"
-      "c a a a b b b b"
       "c a a a b b b b";
     align-items: start;
 }
@@ -141,6 +138,8 @@ span.Add
 {
     color: khaki;
     text-decoration: solid;
+    padding-bottom: 4px;
+    margin: 0;
 }
 .Messages label, .Messages input
 {
