Cleaned up files
Left one Elderly person view for less confusion

--- a/Single_View/styles.css
+++ b/Single_View/styles.css
@@ -257,7 +257,7 @@ p{
 
 .sideBtn{
     background: #545454;
-    text-color: white;
+    color: white;
     position:relative;
     flex: 0 0 19.7%;
     left: 10px;
