--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -4,13 +4,14 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 80px;
   padding: 20px;
+  padding-top: 5px;
   color: white;
 }
 
