--- a/front_end/src/styles.css
+++ b/front_end/src/styles.css
@@ -29,7 +29,8 @@ body
 
 .curator body
 {
-    background: linear-gradient(90deg, dimgrey 24%,  steelblue 25%)
+    text-align: left;
+    /*background: linear-gradient(90deg, dimgrey 24%,  steelblue 25%)*/
 }
 
 /*Page Title*/
@@ -63,7 +64,7 @@ h1
 
 /*Top row of items*/
 
-.cvTopRow
+.cvTopRow 
 {
     display: inline-block;
 }
@@ -84,7 +85,7 @@ h1
     left: 300px;
 }
 
-/*Trusted Circle Member List*/
+/*Trusted Circle Member List
 
 .listHeader
 {
@@ -163,7 +164,7 @@ ul
     background-color: #0033cc;
 }
 
-/*Reminders and Messages*/
+/*Reminders and Messages
 
 .Reminders ul li
 {
@@ -183,12 +184,12 @@ ul
 .Reminders ul li:hover
 {
     background-color: rgb(22, 49, 97);
-}
+}*/
 
-.TCircle .Reminders
+.TCircle .Remlist
 {
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 40%;
+    margin-right: 40%;
 }
 .curator .RemMsg
 {
@@ -197,11 +198,13 @@ ul
     gap: 10px;
     grid-auto-rows: 100px;
     grid-template-areas:
-      "c c a a a b b b";
+      "c a a a b b b";
     align-items: start;
 }
-.Reminders
+.curator .Remlist
 {
+    margin-left: 22%;
+    margin-right: 22%;
     grid-area: a;
 }
 .Messages
@@ -223,6 +226,8 @@ ul
     font-size: 16px;
     line-height: 2;
     letter-spacing: 1px;
+    margin-right: 2px;
+    margin-bottom: 10px;
 }
 
 input.txtbox, select.rmndrList
