--- a/front_end/src/components/List/List.css
+++ b/front_end/src/components/List/List.css
@@ -32,7 +32,7 @@
 .ListMain .theList {
     list-style: none;
     padding-left: 0;
-    width: 250px;
+    width: 85%;
 }
 
 .ListMain .theList li {
