--- a/front_end/src/components/List/List.css
+++ b/front_end/src/components/List/List.css
@@ -1,6 +1,6 @@
 /* List styling */
 
-.ListMain {
+.ListMain { /* in List.js */
     background-color: rgb(56, 56, 56);
     padding: 10px;
     margin: 10px;
@@ -9,7 +9,7 @@
     text-align: center;
 }
 
-.ListMain input {
+.ListMain input { /* in List.js */
     padding: 10px;
     margin-bottom: 10px;
     font-size: 16px;
@@ -17,7 +17,7 @@
     width: 50%;
 }
 
-.ListMain button {
+.ListMain button { /* in List.js */
     text-align: center;
     padding: 10px;
     font-size: 20px;
@@ -34,7 +34,7 @@
     cursor: pointer;
 }
 
-.ListMain .theList {
+.ListMain .theList { /* in Items.js */
     list-style: none;
     padding-left: 0;
     width: 85%;
@@ -46,7 +46,6 @@
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
-
     transition: background-color .2s ease-out;
 }
 
