--- a/front_end/src/components/Chat/ChatInput/ChatInput.css
+++ b/front_end/src/components/Chat/ChatInput/ChatInput.css
@@ -10,3 +10,23 @@ li {
   line-height: 2rem;
   border-bottom: 1px dotted #777;
 }
+form{
+  width: 100%;
+  height: 25vh;
+}
+.input-window{
+  height: 62.5%;
+  width: 80%;
+  float:left;
+}
+.send-message-button{
+  border-radius: 20px;
+  padding: 4%;
+  cursor: pointer;
+}
+.logged-in-user{
+  float: left;
+  margin-left: 10px;
+  color:black;
+  font-weight:bold;
+}
