colours changed a bit
changed some colours and colour schemes in some places like yelllow coloured tesxt, the web app should look better

--- a/front_end/src/components/Authentication/Login/LoginButton.css
+++ b/front_end/src/components/Authentication/Login/LoginButton.css
@@ -15,7 +15,7 @@ li {
   display: grid;
   width: 10%;
   border: none;
-  background-color: blue;
+  background-color: rgb(1, 120, 255);
   padding: 5px;
   font-size: 22px;
   cursor: pointer;
