--- a/front_end/src/components/List/List.css
+++ b/front_end/src/components/List/List.css
@@ -4,7 +4,7 @@
     background-color: rgb(56, 56, 56);
     padding: 10px;
     margin: 10px;
-    color: khaki;
+    color: rgb(255, 255, 255);
     /*float: left;*/
     text-align: center;
 }
@@ -24,7 +24,7 @@
     width: 10%;
     margin-bottom: 10px;
     background-color: green;
-    color: khaki;
+    color: rgb(255, 255, 255);
     border: 2px solid green;
 }
 
