--- a/front_end/src/styles.css
+++ b/front_end/src/styles.css
@@ -12,18 +12,10 @@ body {
   background-color: rgb(113, 170, 216);
   padding: 0px;
   margin: 0px;
-}
-
-.TCircle body {
   text-align: center;
-}
-
-.index body {
-  text-align: center;
-}
-
-.curator body {
-  text-align: left;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(90deg, rgb(113, 170, 216) 22%, #696969 20%);
 }
 
 /*Page Title*/
@@ -52,45 +44,14 @@ h1 {
   background-color: grey;
 }
 
-/*Top row of items*/
+/* curator view */
 
-.cvTopRow {
-  display: inline-block;
-}
-
-/*Curator Content View
-
-.cvContent {
-  position: relative;
-  left: 200px;
-}
-
-/*Control Panel
-
-.cvPanel {
-  position: relative;
-  left: 300px;
+.curatorview .video {
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 /*Reminders and Messages*/
-
-.curator .RemMsg {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  gap: 10px;
-  grid-auto-rows: 100px;
-  grid-template-areas: "c a a a b b b";
-  align-items: start;
-}
-.curator .Remlist {
-  margin-left: 22%;
-  margin-right: 22%;
-  grid-area: a;
-}
-.Messages {
-  text-align: center;
-  grid-area: b;
-}
 
 .Messages h2 {
   color: rgb(255, 255, 255);
@@ -110,18 +71,19 @@ h1 {
 
 input.txtbox,
 select.rmndrList {
-  background-color: grey;
+  background-color: rgb(69, 69, 69);
 }
 
 input.SndBtn {
-  background-color: grey;
+  background-color: rgb(69, 69, 69);
   cursor: pointer;
 }
 input.SndBtn:hover {
-  background-color: darkgrey;
+  background-color: grey;
 }
 
 /* elderly person view and curator view main page */
+
 .header {
   color: white;
   text-align: left;
@@ -132,12 +94,6 @@ input.SndBtn:hover {
 p {
   color: white;
   font-size: 20px;
-}
-
-.backg {
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(90deg, rgb(113, 170, 216) 22%, #221f1f 20%);
 }
 
 .sideButtons {
@@ -171,19 +127,13 @@ p {
   transform: scale(1.2) !important;
 }
 
-.media {
-  display: flex;
-}
-
 .weatherApi {
   margin-left: 1%;
 }
 
-.video {
-  position: relative;
-  margin-left: 30%;
+.elderview .video {
+  margin-left: 32%;
   margin-right: 5%;
-  flex: auto;
 }
 
 .bottomButtons {
