--- a/front_end/src/components/Chat/ChatInput/ChatInput.css
+++ b/front_end/src/components/Chat/ChatInput/ChatInput.css
@@ -10,7 +10,7 @@ li {
   line-height: 2rem;
   border-bottom: 1px dotted #777;
 }
-form{
+.form-container form {
   width: 100%;
   height: 25vh;
 }
