--- a/front_end/src/styles.css
+++ b/front_end/src/styles.css
@@ -18,6 +18,10 @@ body {
   background: linear-gradient(90deg, rgb(113, 170, 216) 22%, #696969 20%);
 }
 
+a {
+  cursor: pointer;
+}
+
 /*Page Title*/
 
 h1 {
@@ -111,7 +115,6 @@ select.rmndrList {
 .elderview .sideBtn {
   position:relative;
   flex: 0 0 19.7%;
-
   left:950px;
   top:150px;
   height: 65px;
@@ -132,10 +135,10 @@ select.rmndrList {
   color: white;
   position: relative;
   flex: 0 0 19.7%;
-  left: 45%;
+  left: 25%;
   margin-top: 1%;
   height: 100px;
-  width: 180px;
+  width: 50%;
   margin-bottom: 10px;
   text-align: center;
   transition: transform 300ms ease 200ms;
